fixed header spacing

--- a/styles/site.css
+++ b/styles/site.css
@@ -87,7 +87,7 @@
 
 .stuck-to-top .eliz-page-link {
     margin: 0;
-    margin-left: 1em;
+    /*margin-left: 1em;*/
     color: black;
 }
 
@@ -111,8 +111,12 @@
 
 .header ul {
     list-style-type: none;
-    flex-grow: 1;
     margin: 0;
+}
+
+input {
+    margin: 0;
+    display: none;
 }
 
 .header li {
